Fixes #156. Also fixes Datepicker header in Chrome, was not aligned to the dates columns

--- a/themes/grav/css-compiled/template.css
+++ b/themes/grav/css-compiled/template.css
@@ -449,7 +449,7 @@ hr {
    */
   .switch-grav {
     background-color: #fff;
-    border: 1px solid #d4d4d4;
+    border: 1px solid #d5d5d5;
     border-radius: 4px;
     /* Selected ON switch-light
      */ }
@@ -580,7 +580,7 @@ form .selectize-control.multi .selectize-input {
     border-radius: 2px;
     line-height: 1.5; }
     form .selectize-control.multi .selectize-input > div.active {
-      background: #d4d4d4; }
+      background: #d5d5d5; }
 form .selectize-control.single .selectize-input:after {
   right: 27px; }
 form .selectize-control.single .selectize-input.dropdown-active:after {
@@ -599,7 +599,7 @@ form .large {
     height: 10rem; }
 form select {
   width: 100%;
-  border: 1px solid #d4d4d4;
+  border: 1px solid #d5d5d5;
   background: #fff;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -609,17 +609,17 @@ form select {
   margin: 0; }
 form input[type=text], form input[type=password], form input[type=email] {
   width: 100%;
-  border: 1px solid #d4d4d4;
+  border: 1px solid #d5d5d5;
   background: #fff; }
 form input[readonly=readonly] {
   background: #f2f2f2;
   font-weight: bold; }
 form textarea {
   width: 100%;
-  border: 1px solid #d4d4d4;
+  border: 1px solid #d5d5d5;
   background: #fff; }
 form .form-frontmatter-wrapper {
-  border: 1px solid #d4d4d4;
+  border: 1px solid #d5d5d5;
   border-radius: 4px; }
 form .switch-toggle label {
   cursor: pointer; }
@@ -665,7 +665,7 @@ form .checkboxes {
     margin-right: 10px;
     position: absolute;
     background: #fff;
-    border: 1px solid #d4d4d4;
+    border: 1px solid #d5d5d5;
     border-radius: 4px; }
   form .checkboxes input[type=checkbox] {
     display: none; }
@@ -688,7 +688,7 @@ form .checkboxes {
   margin-bottom: 3rem; }
   .form-frontmatter-wrapper .dragbar {
     height: 4px;
-    background: #d4d4d4;
+    background: #d5d5d5;
     cursor: row-resize; }
 
 #frontmatter + .CodeMirror {
@@ -703,7 +703,7 @@ form .checkboxes {
   .form-order-wrapper ul#ordering li {
     padding: 0.2rem 1rem;
     border-radius: 4px;
-    border: 1px solid #d4d4d4;
+    border: 1px solid #d5d5d5;
     background: #f8f8f8;
     color: #8d959a;
     margin: 3px 0;
@@ -727,7 +727,7 @@ form .checkboxes {
     cursor: move;
     padding: 1rem;
     border-radius: 4px;
-    border: 1px solid #d4d4d4;
+    border: 1px solid #d5d5d5;
     background: #f8f8f8;
     color: #8d959a;
     margin: 3px 0;
@@ -852,6 +852,15 @@ tr {
   tr:hover {
     background: #f3f3f3; }
 
+.k-calendar-container table,
+.k-calendar-container tbody,
+.k-calendar-container thead {
+  width: 100%; }
+.k-calendar-container thead th:first-child {
+  padding-left: 0; }
+.k-calendar-container thead th:last-child {
+  padding-right: 0.5rem; }
+
 .button {
   background: #41bea8;
   color: rgba(255, 255, 255, 0.85);
@@ -861,21 +870,21 @@ tr {
     color: #fff; }
   .button.dropdown-toggle {
     background: #54c5b0;
-    border-left: 1px solid #3aab97; }
+    border-left: 1px solid #3bab97; }
   .button.dropdown-toggle {
-    border-left: 1px solid #3aab97; }
+    border-left: 1px solid #3bab97; }
   .button.secondary {
-    background: #29796b;
+    background: #2a7a6b;
     color: rgba(255, 255, 255, 0.85);
     border-radius: 4px; }
     .button.secondary:hover {
-      background: #2f8c7c;
+      background: #318d7c;
       color: #fff; }
     .button.secondary.dropdown-toggle {
-      background: #2f8c7c;
-      border-left: 1px solid #23665a; }
+      background: #318d7c;
+      border-left: 1px solid #23675a; }
     .button.secondary.dropdown-toggle {
-      border-left: 1px solid #2f8c7c; }
+      border-left: 1px solid #318d7c; }
 
 .button-group {
   position: relative;
@@ -917,7 +926,7 @@ tr {
     background-color: #41bea8;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
-    border: 1px solid #3aab97;
+    border: 1px solid #3bab97;
     border: 1px solid rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
@@ -984,7 +993,7 @@ tr {
   #admin-login .form-data {
     padding-right: 0; }
   #admin-login h1 {
-    background: #20333e url(../images/logo.png) 50% 50% no-repeat;
+    background: #21333e url(../images/logo.png) 50% 50% no-repeat;
     font-size: 0;
     color: transparent;
     height: 216px;
@@ -1000,15 +1009,15 @@ tr {
       text-align: center;
       font-weight: 300;
       -webkit-font-smoothing: auto;
-      border: 1px solid #1d2e38; }
+      border: 1px solid #1e2e39; }
       #admin-login form input::-webkit-input-placeholder {
-        color: #83949c; }
+        color: #83949d; }
       #admin-login form input::-moz-placeholder {
-        color: #83949c; }
+        color: #83949d; }
       #admin-login form input:-moz-placeholder {
-        color: #83949c; }
+        color: #83949d; }
       #admin-login form input:-ms-input-placeholder {
-        color: #83949c; }
+        color: #83949d; }
     #admin-login form .form-actions {
       text-align: center;
       margin: 0 -3rem -3rem -3rem;
@@ -1037,7 +1046,7 @@ tr {
       color: #fff; }
 
 #admin-logo {
-  background: #20333e;
+  background: #21333e;
   height: 4.2rem; }
   #admin-logo h3 {
     text-transform: uppercase;
@@ -1051,7 +1060,7 @@ tr {
 
 #admin-user-details {
   padding: 2rem;
-  border-bottom: 1px solid #20333e;
+  border-bottom: 1px solid #21333e;
   overflow: hidden; }
   #admin-user-details img {
     -webkit-transition: all 0.5s ease;
@@ -1092,7 +1101,7 @@ tr {
       #admin-menu li .badges .badge {
         display: inline-block;
         margin-right: -5px;
-        color: #e5e5e5; }
+        color: #e6e6e6; }
       #admin-menu li .badges .count {
         background-color: #365569; }
       #admin-menu li .badges .updates {
@@ -1127,7 +1136,7 @@ tr {
           #admin-menu li a i {
             display: none; } }
       #admin-menu li a:hover {
-        background: #20333e;
+        background: #21333e;
         color: #fff; }
         #admin-menu li a:hover i {
           font-size: 1.2rem; }
@@ -1512,7 +1521,7 @@ tr {
       color: #888888;
       text-shadow: 1px 1px 0 #fff; }
       .pages-list .row p.page-route .spacer {
-        color: #d4d4d4;
+        color: #d5d5d5;
         display: inline-block;
         margin: 0 0.3rem; }
     .pages-list .row .hint--bottom:before, .pages-list .row .hint--bottom:after {
@@ -1974,7 +1983,7 @@ body.remodal_active .remodal {
     border-radius: 0; }
 
 .grav-mdeditor-navbar {
-  border: 1px solid #d4d4d4;
+  border: 1px solid #d5d5d5;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
   background: #fbfbfb; }
@@ -1993,8 +2002,8 @@ body.remodal_active .remodal {
     .grav-mdeditor-navbar ul .mdeditor-active a {
       background: white;
       cursor: auto;
-      border-left: 1px solid #d4d4d4;
-      border-right: 1px solid #d4d4d4; }
+      border-left: 1px solid #d5d5d5;
+      border-right: 1px solid #d5d5d5; }
       .grav-mdeditor-navbar ul .mdeditor-active a:hover {
         background: #fff; }
     .grav-mdeditor-navbar ul a {
@@ -2017,7 +2026,7 @@ body.remodal_active .remodal {
     border-top-right-radius: 4px; }
 
 .grav-mdeditor-content {
-  border: 1px solid #d4d4d4;
+  border: 1px solid #d5d5d5;
   border-top: 0;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px; }
@@ -2061,7 +2070,7 @@ body.remodal_active .remodal {
 [data-mode=split] .grav-mdeditor-button-code, [data-mode=split] .grav-mdeditor-button-preview {
   display: none; }
 [data-mode=split] .grav-mdeditor-code {
-  border-right: 1px solid #d4d4d4; }
+  border-right: 1px solid #d5d5d5; }
   [data-mode=split] .grav-mdeditor-code, [data-mode=split] .grav-mdeditor-code .grav-mdeditor-preview {
     float: left;
     width: 50%; }
@@ -2157,7 +2166,7 @@ body.remodal_active .remodal {
 
 .dropzone {
   position: relative;
-  border: 1px #d4d4d4 solid;
+  border: 1px #d5d5d5 solid;
   border-radius: 4px;
   min-height: 4rem;
   background: #fff; }
